{
  "version": 4,
  "terraform_version": "0.12.5",
  "serial": 889,
  "lineage": "d589b64a-0ff0-3f8f-30c5-7d092a97c071",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "nuxt-rails-igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:667123667048:internet-gateway/igw-0f0d10662bea2378e",
            "id": "igw-0f0d10662bea2378e",
            "owner_id": "667123667048",
            "tags": {
              "Name": "nuxt-rails-igw"
            },
            "vpc_id": "vpc-019e180eef538a026"
          },
          "depends_on": [
            "aws_vpc.nuxt-rails-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "nuxt-rails-alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:667123667048:loadbalancer/app/nuxt-rails-alb/7ec6beb649640c0c",
            "arn_suffix": "app/nuxt-rails-alb/7ec6beb649640c0c",
            "dns_name": "nuxt-rails-alb-402432325.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:667123667048:loadbalancer/app/nuxt-rails-alb/7ec6beb649640c0c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "nuxt-rails-alb",
            "security_groups": [
              "sg-0eb6b6a5e43dcadb7"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0625f0b09e0058d23"
              },
              {
                "subnet_id": "subnet-0832d0e4a2d641930"
              }
            ],
            "subnets": [
              "subnet-0625f0b09e0058d23",
              "subnet-0832d0e4a2d641930"
            ],
            "tags": {
              "Name": "nuxt-rails-alb"
            },
            "vpc_id": "vpc-019e180eef538a026",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "depends_on": [
            "aws_security_group.nuxt-rails-alb-sg",
            "aws_subnet.nuxt-rails-public-1a",
            "aws_subnet.nuxt-rails-public-1c"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nuxt-rails-http-listener",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:667123667048:listener/app/nuxt-rails-alb/7ec6beb649640c0c/096f232ee2c1dae8",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:667123667048:listener/app/nuxt-rails-alb/7ec6beb649640c0c/096f232ee2c1dae8",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:667123667048:loadbalancer/app/nuxt-rails-alb/7ec6beb649640c0c",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "depends_on": [
            "aws_lb.nuxt-rails-alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nuxt-rails-https-listener",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "rails-listener",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nuxt-alb-tg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:667123667048:targetgroup/nuxt-alb-tg/d849dea0f2769622",
            "arn_suffix": "targetgroup/nuxt-alb-tg/d849dea0f2769622",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 150,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 120,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:667123667048:targetgroup/nuxt-alb-tg/d849dea0f2769622",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "nuxt-alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-019e180eef538a026"
          },
          "depends_on": [
            "aws_vpc.nuxt-rails-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "rails-alb-tg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:667123667048:targetgroup/rails-alb-tg/2190ac116e8ebc94",
            "arn_suffix": "targetgroup/rails-alb-tg/2190ac116e8ebc94",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 60,
                "matcher": "200",
                "path": "/v1/tasks",
                "port": "8080",
                "protocol": "HTTP",
                "timeout": 50,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:667123667048:targetgroup/rails-alb-tg/2190ac116e8ebc94",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "rails-alb-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-019e180eef538a026"
          },
          "depends_on": [
            "aws_vpc.nuxt-rails-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "nuxt-rails-public-rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0350963914e0d9a12",
            "owner_id": "667123667048",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f0d10662bea2378e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "nuxt-rails-public-rt"
            },
            "vpc_id": "vpc-019e180eef538a026"
          },
          "depends_on": [
            "aws_internet_gateway.nuxt-rails-igw",
            "aws_vpc.nuxt-rails-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "nuxt-rails-public-rt-1a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-028917641eaecca88",
            "route_table_id": "rtb-0350963914e0d9a12",
            "subnet_id": "subnet-0832d0e4a2d641930"
          },
          "depends_on": [
            "aws_route_table.nuxt-rails-public-rt",
            "aws_subnet.nuxt-rails-public-1a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "nuxt-rails-public-rt-1c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03ccdbb7c9688155f",
            "route_table_id": "rtb-0350963914e0d9a12",
            "subnet_id": "subnet-0625f0b09e0058d23"
          },
          "depends_on": [
            "aws_route_table.nuxt-rails-public-rt",
            "aws_subnet.nuxt-rails-public-1c"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nuxt-rails-alb-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:667123667048:security-group/sg-0eb6b6a5e43dcadb7",
            "description": "ALB security group for nuxt rails",
            "egress": [],
            "id": "sg-0eb6b6a5e43dcadb7",
            "ingress": [],
            "name": "nuxt-rails-alb-sg",
            "name_prefix": "",
            "owner_id": "667123667048",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-019e180eef538a026"
          },
          "depends_on": [
            "aws_vpc.nuxt-rails-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nuxt-rails-ecs-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:667123667048:security-group/sg-01af5320235616d1e",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-01af5320235616d1e",
            "ingress": [],
            "name": "nuxt-rails-ecs-sg",
            "name_prefix": "",
            "owner_id": "667123667048",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nuxt-rails-ecs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-019e180eef538a026"
          },
          "depends_on": [
            "aws_vpc.nuxt-rails-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nuxt-rails-rds-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:667123667048:security-group/sg-041515a4a8ce67fa8",
            "description": "nuxt rails rds security group",
            "egress": [],
            "id": "sg-041515a4a8ce67fa8",
            "ingress": [],
            "name": "nuxt-rails-rds-security-group",
            "name_prefix": "",
            "owner_id": "667123667048",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-019e180eef538a026"
          },
          "depends_on": [
            "aws_vpc.nuxt-rails-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nuxt-rails-sg-egress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "nuxt rails sg egress",
            "from_port": 0,
            "id": "sgrule-1891331135",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-01af5320235616d1e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "depends_on": [
            "aws_security_group.nuxt-rails-ecs-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nuxt-rails-sg-ingress1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "nuxt rails sg ingress1",
            "from_port": 80,
            "id": "sgrule-1659314178",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01af5320235616d1e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.nuxt-rails-ecs-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nuxt-rails-sg-ingress2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "nuxt rails sg ingress2",
            "from_port": 3000,
            "id": "sgrule-3130707380",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01af5320235616d1e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 3000,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.nuxt-rails-ecs-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nuxt-rails-sg-ingress3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "nuxt rails sg ingress3",
            "from_port": 8080,
            "id": "sgrule-4126836640",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01af5320235616d1e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.nuxt-rails-ecs-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "nuxt-rails-private-1a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:667123667048:subnet/subnet-002891fc73b02f0db",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-002891fc73b02f0db",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "667123667048",
            "tags": {
              "Name": "nuxt-rails-private-1a"
            },
            "vpc_id": "vpc-019e180eef538a026"
          },
          "depends_on": [
            "aws_vpc.nuxt-rails-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "nuxt-rails-private-1c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:667123667048:subnet/subnet-0a544181e63018bdc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0a544181e63018bdc",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "667123667048",
            "tags": {
              "Name": "nuxt-rails-private-1c"
            },
            "vpc_id": "vpc-019e180eef538a026"
          },
          "depends_on": [
            "aws_vpc.nuxt-rails-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "nuxt-rails-public-1a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:667123667048:subnet/subnet-0832d0e4a2d641930",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0832d0e4a2d641930",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "667123667048",
            "tags": {
              "Name": "nuxt-rails-public-1a"
            },
            "vpc_id": "vpc-019e180eef538a026"
          },
          "depends_on": [
            "aws_vpc.nuxt-rails-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "nuxt-rails-public-1c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:667123667048:subnet/subnet-0625f0b09e0058d23",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0625f0b09e0058d23",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "667123667048",
            "tags": {
              "Name": "nuxt-rails-public-1c"
            },
            "vpc_id": "vpc-019e180eef538a026"
          },
          "depends_on": [
            "aws_vpc.nuxt-rails-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "nuxt-rails-vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:667123667048:vpc/vpc-019e180eef538a026",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fe291b679c5193d5",
            "default_route_table_id": "rtb-09993933531a55cf4",
            "default_security_group_id": "sg-0ec32eb0f142dd185",
            "dhcp_options_id": "dopt-29b5a04e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-019e180eef538a026",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09993933531a55cf4",
            "owner_id": "667123667048",
            "tags": {
              "Name": "nuxt-rails-vpc"
            }
          }
        }
      ]
    }
  ]
}